metadata-sfdx/force-app/main/default/objects/WorkItemRouter__mdt/WorkItemRouter__mdt.object-meta.xml
<CustomObject>
    <label>Work Item Router</label>
    <pluralLabel>Work Item Routers</pluralLabel>
</CustomObject>