metadata-sfdx/force-app/main/default/objects/WorkItemRouter__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True: router is active and will be used to set fields as defined. 
False: router is not active and the fields will not be set.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>