metadata-sfdx/force-app/main/default/objects/WorkItemRouter__mdt/fields/OwnerId__c.field-meta.xml
<CustomField>
    <fullName>OwnerId__c</fullName>
    <label>OwnerId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>