metadata-sfdx/force-app/main/default/objects/WorkItemRouter__mdt/fields/RecordtypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordtypeId__c</fullName>
    <label>RecordtypeId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>