metadata-sfdx/force-app/main/default/objects/WorkItemRouter__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BGC Identity Mismatch</fullName>
                <default>true</default>
                <label>BGC Identity Mismatch</label>
            </value>
            <value>
                <fullName>Banned Pro Re-entry</fullName>
            </value>
            <value>
                <fullName>Customer Contact Verification</fullName>
            </value>
            <value>
                <fullName>Customer Payment Review</fullName>
            </value>
            <value>
                <fullName>Review Message</fullName>
            </value>
            <value>
                <fullName>Messaging Verification</fullName>
            </value>
            <value>
                <fullName>Blacklisted Number</fullName>
            </value>
            <value>
                <fullName>PA Request a call error</fullName>
            </value>
            <value>
                <fullName>Customer Contact Dispute</fullName>
            </value>
            <value>
                <fullName>Low quality to remove</fullName>
            </value>
            <value>
                <fullName>Chargeback warning</fullName>
            </value>
            <value>
                <fullName>Chargeback removal</fullName>
            </value>
            <value>
                <fullName>Review Message for Spam</fullName>
            </value>
            <value>
                <fullName>In Product Fraud Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>